--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "express-validator": "^6.14.2",
+    "mongoose": "^6.7.1",
     "nodemon": "^2.0.20"
   }
 }
